apps/dev/kubeapps/release.yaml

apiVersion: v1 
kind: Namespace 
metadata: 
  name: kubeapps
