apps/dev/kubeapps/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubeapps
  namespace: kubeapps
  annotations:
    kubernetes.io/ingress.class: nginx 
spec:
  rules:
  - host: kubeapps.alfredbrowniii.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kubeapps
            port: 
              number: 80
